--- a/index.html
+++ b/index.html
@@ -16,18 +16,8 @@
 </head>
 <div id="wrapper">
 <body>
-
-    <header>
-        <h1>Sweet Spot Weather Tracking App</h1>
-        <h2>Data-driven exploration of weather patterns for your personal needs</h2>
-    </header>
-    <main>
-        
-        
-    </main>
-    <footer>
-@Copyright Baktygul Aliev
-    </footer>
+    <div id="root"></div>
+    <script type="module" src="index.js"></script>
 </body>
 </div>
 </html>
